--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -12,7 +12,7 @@
     {{ content }}
     </div>
   </div>
-  <div><a href="https://upatras-hci-2022.github.io/webring/" ;="" target="_blank"><img src ="https://avatars.githubusercontent.com/u/115543135" style="overflow:visible;" width="50"></a>  
+  <div style = "margin: 0 auto;"><a href="https://upatras-hci-2022.github.io/webring/" ;="" target="_blank"><img src ="https://avatars.githubusercontent.com/u/115543135" style="overflow:visible;" width="50"></a>  
 </image>
   </a></div>
 </body>
