Fixed webring div

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -12,8 +12,6 @@
     {{ content }}
     </div>
   </div>
-  <div style = "margin: 0 auto; width: 50px"><a href="https://upatras-hci-2022.github.io/webring/" ;="" target="_blank"><img src ="https://avatars.githubusercontent.com/u/115543135" style="overflow:visible;" width="50"></a>  
-</image>
-  </a></div>
+   <div style = "margin: 0 auto; width: 50px"><a href="https://upatras-hci-2022.github.io/webring/" target="_blank"><img src ="https://avatars.githubusercontent.com/u/115543135" style="overflow:visible;" width="50"></a></div>
 </body>
 </html>
